--- a/src/assets/scss/blocks/reusable/button.scss
+++ b/src/assets/scss/blocks/reusable/button.scss
@@ -2,14 +2,56 @@
 
 .button-border {
   @include button($background: false);
+
+  &::before {
+    border-color: currentColor;
+  }
 }
 
 .button-fill {
-  @include button($color: $default-color, $background: $main-font-color);
+  @include button($color: $default-color, $background: $alt-default-color);
+}
+
+.button-fill,
+.button-border {
+  &.link {
+    border-bottom: none;
+
+    &::before {
+      z-index: -1;
+    }
+  }
 }
 
 .button {
   &__content {
     position: relative;
+  }
+
+  &__preloader {
+    @include box(100%);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    pointer-events: none;
+  }
+}
+
+.button_disabled,
+.button:disabled,
+.button-border:disabled,
+.button-fill:disabled {
+  cursor: default;
+
+  @include in-focus {
+    &::before {
+      transform: none;
+    }
   }
 }
