--- a/src/assets/scss/blocks/reusable/link.scss
+++ b/src/assets/scss/blocks/reusable/link.scss
@@ -1,7 +1,7 @@
 @use '../../tools' as *;
 
 .link {
-  color: $main-font-color;
+  color: $default-color;
 
   border-bottom: 1px solid $transparent-color;
 
