--- a/src/assets/scss/animation/keyframes.scss
+++ b/src/assets/scss/animation/keyframes.scss
@@ -1,72 +1,67 @@
-@-webkit-keyframes fade-in {
-  from {
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes zoom-in {
+  0% {
     opacity: 0;
+
+    transform: scale3d(0.3, 0.3, 0.3);
   }
 
-  to {
+  50% {
     opacity: 1;
   }
 }
 
 @keyframes fade-in {
-  from {
+  0% {
     opacity: 0;
   }
 
-  to {
+  100% {
     opacity: 1;
-  }
-}
-
-@-webkit-keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
   }
 }
 
 @keyframes fade-out {
-  from {
+  0% {
     opacity: 1;
   }
 
-  to {
+  100% {
     opacity: 0;
-  }
-}
-
-@-webkit-keyframes slide-in-down {
-  from {
-    visibility: visible;
-
-    opacity: 0;
-
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-
-  25% {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes slide-in-down {
-  from {
+  0% {
+    transform: translate3d(0, -200%, 0);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slide-out-up {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(0, -200%, 0);
+  }
+}
+
+@keyframes fade-slide-in-down {
+  0% {
     visibility: visible;
 
     opacity: 0;
 
-    -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
 
@@ -74,19 +69,17 @@
     opacity: 0;
   }
 
-  to {
+  100% {
     opacity: 1;
 
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
 
-@-webkit-keyframes slide-out-up {
-  from {
+@keyframes fade-slide-out-up {
+  0% {
     opacity: 1;
 
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 
@@ -94,34 +87,60 @@
     opacity: 1;
   }
 
-  to {
+  100% {
     visibility: hidden;
 
     opacity: 0;
 
-    -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
 }
 
-@keyframes slide-out-up {
-  from {
-    opacity: 1;
-
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+@keyframes bounce-in {
+  0%,
+  20%,
+  40%,
+  60%,
+  80%,
+  100% {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
   }
 
-  75% {
-    opacity: 1;
-  }
-
-  to {
-    visibility: hidden;
-
+  0% {
     opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
 
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
+  20% {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  40% {
+    transform: scale3d(0.9, 0.9, 0.9);
+  }
+
+  60% {
+    opacity: 1;
+    transform: scale3d(1.03, 1.03, 1.03);
+  }
+
+  80% {
+    transform: scale3d(0.97, 0.97, 0.97);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+}
+
+@keyframes pulse-big {
+  0%,
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    transform: scale3d(1.3, 1.3, 1.3);
   }
 }
