--- a/src/assets/scss/utils/functions.scss
+++ b/src/assets/scss/utils/functions.scss
@@ -1,18 +1,17 @@
 @use 'vars' as vars;
-@use 'sass:math';
+@use 'sass:string';
 
-// px to rem
-@function rem($pixels, $context: vars.$font-size-mobile) {
-  @if (unitless($pixels)) {
-    $pixels: $pixels * 1px;
+/// Replace `$search` with `$replace` in `$string`
+/// @param {String} $string - Initial string
+/// @param {String} $search - Substring to replace
+/// @param {String} $replace ('') - New value
+/// @return {String} - Updated string
+@function str-replace($string, $search, $replace: '') {
+  $index: string.index($string, $search);
+
+  @if $index {
+    @return string.slice($string, 1, $index - 1) + $replace + str-replace(string.slice($string, $index + string.length($search)), $search, $replace);
   }
 
-  @if (unitless($context)) {
-    $context: $context * 1px;
-  }
-
-  $result: $pixels / $context * 1rem;
-  $result: math.round($result * 100) / 100;
-
-  @return $result;
+  @return $string;
 }
