--- a/src/assets/scss/utils/common.scss
+++ b/src/assets/scss/utils/common.scss
@@ -16,13 +16,24 @@ html {
 }
 
 body {
+  position: relative;
+
+  min-width: $phone-portrait-min-width;
   padding: 0;
 
   font-family: $main-font-family;
   font-weight: 400;
   font-size: $main-font-size;
+  line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1.25;
 }
 
 a {
