--- a/src/pug/includes/modules/header/header.pug
+++ b/src/pug/includes/modules/header/header.pug
@@ -1,4 +1,5 @@
 - var globalData = locals.data.globalData
+
 if locals.data.pageData.url === '/'
   -
     globalData.company.logoImages = {
@@ -28,14 +29,15 @@ if locals.data.pageData.url === '/'
     }
 
 header.page-header
-  .container
-    a.page-header__logo-link(href=(locals.data.pageData.url === '/' ? false : '/'))
-      +picture-tag(globalData.company.logoImages, globalData.company.logoImages.desktop.png['2x'], 'Клиника профессионального массажа Expert').page-header__logo-image
-    include main-menu
-    button.page-header__menu-trigger.burger-icon(aria-label='Открыть меню')
-      span.burger-icon__center
-    ul.page-header__phones.phones-list
-      each phone in globalData.company.phones
-        li.phones-list__phone= phone
-    button.page-header__appointment-button.button.button_main
-      span.button__content Записаться
+  a.page-header__logo-link(href=(locals.data.pageData.url === '/' ? false : '/'))
+    +picture-tag(globalData.company.logoImages, globalData.company.logoImages.desktop.png['2x'], 'Клиника профессионального массажа Expert').page-header__logo-image
+  include main-menu
+  button.page-header__menu-trigger.burger-icon.hidden_desktop-tablet(data-state='initial' aria-label='Открыть меню')
+    span.burger-icon__center
+  ul.page-header__phones.phones-list
+    each phone in globalData.company.phones
+      - var phoneNumber = phone.replace(/[()\s-]/g, '')
+      li.phones-list__phone
+        a.phones-list__phone-number.link.undeline.underline_dotted.underline_gray-dotted(href=`tel:${phoneNumber}`)= phone
+  button.page-header__appointment-button.button.button_primary
+    span.button__content Записаться
