--- a/src/pug/includes/modules/header/main-menu.pug
+++ b/src/pug/includes/modules/header/main-menu.pug
@@ -46,25 +46,26 @@
 
 mixin submenu-item(massage)
   li.submenu__list-item
-    a.submenu__link(href=massage.url)= massage.name
+    a.submenu__link.link(href=massage.url)= massage.name
     if massage.tag
       b.submenu__tag(class=(massage.tag.color ? `submenu__tag_${massage.tag.color}` : false))= massage.tag.text
 
-nav.main-menu
+nav.main-menu.hidden_mobile
   h2.visually-hidden Главное меню
   ul.main-menu__list
-    li.main-menu__list-item.dropdown
-      span.main-menu__section.dropdown__trigger(data-on='hover') Виды массажа
-      .main-menu__submenu.submenu.dropdown__body
-        each type, i in ['Массаж тела', 'Массаж лица']
-          ul.submenu__list
-            li.submenu__list-item
-              h3.submenu___list-heading= type
-            each massage in globalData.massages
-              if ((i === 0) && (massage.menuType === 'body') || (i === 1) && (massage.menuType === 'face'))
-                +submenu-item(massage)
-        a.submenu__promo-link
-          +picture-tag(menuData.promo.image, menuData.promo.image.mobile.png['3x'], menuData.promo.name, 230, 210).submenu__promo-image
+    li.main-menu__list-item.dropdown(data-on='hover')
+      span.main-menu__section.dropdown__trigger Виды массажа
+      .main-menu__submenu.dropdown__body
+        .submenu
+          each type, i in ['Массаж тела', 'Массаж лица']
+            ul.submenu__list
+              li.submenu__list-item
+                h3.submenu__list-heading= type
+              each massage in globalData.massages
+                if ((i === 0) && (massage.menuType === 'body') || (i === 1) && (massage.menuType === 'face'))
+                  +submenu-item(massage)
+          a.submenu__promo-link
+            +picture-tag(menuData.promo.image, menuData.promo.image.mobile.png['3x'], menuData.promo.name, 230, 210).submenu__promo-image
     each item in menuData.list
       li.main-menu__list-item
-        a(href=item.url)= item.text
+        a.main-menu__link.link(href=item.url)= item.text
