--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -17,15 +17,15 @@ block variables
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
-          smallText: `специализируемся на массаже. <a class='link link_primary underline' href='/about.html'>О нас</a>`
+          smallText: `специализируемся<br>на массаже. <a class='link link_primary underline' href='/about.html'>О нас</a>`
         },
         {
           bigText: '10 лет',
-          smallText: 'минимальный стаж специалистов, у всех мед. образование'
+          smallText: `минимальный стаж специалистов,<br>у всех мед. образование`
         },
         {
           bigText: '800',
-          smallText: `честных <a class='link link_primary underline' href='/reviews.html'>отзывов</a> c
+          smallText: `честных <a class='link link_primary underline' href='/reviews.html'>отзывов</a><br>с
             ${globalData.company.foundationYear} по ${globalData.currentYear}`
         }
       ]
