--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,21 +13,21 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/',
       pageClass: 'index-page',
       theme: 'main',
-      mainScreenHeading: 'Expert - первая клиника профессионального массажа',
+      mainScreenHeading: 'EXPERT — первая клиника профессионального массажа',
       mainScreenSubheading: `Мы избавляем от болей в спине, целлюлита и отёков, подтягиваем лицо без операций и лечим
         массажем`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
-          smallText: `специализируемся на массаже. <a class='link link_primary underline' href='/about.html'>О нас</a>`
+          smallText: `специализируемся<br>на массаже. <a class='link link_primary underline' href='/about.html'>О нас</a>`
         },
         {
           bigText: '10 лет',
-          smallText: 'минимальный стаж специалистов, у всех мед. образование'
+          smallText: `минимальный стаж специалистов,<br>у всех мед. образование`
         },
         {
           bigText: '800',
-          smallText: `честных <a class='link link_primary underline' href='/reviews.html'>отзывов</a> c
+          smallText: `честных <a class='link link_primary underline' href='/reviews.html'>отзывов</a><br>с
             ${globalData.company.foundationYear} по ${globalData.currentYear}`
         }
       ]
